<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:src="@drawable/q00" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/wo" />
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/q0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/qindenglu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/action0"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:src="@drawable/q1" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/action0"
                android:gravity="center"
                android:text="@string/yinhangka"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:src="@drawable/q2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/action1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:src="@drawable/q3" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/action1"
                android:gravity="center"
                android:text="@string/anquanshezhi"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:src="@drawable/q2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/action2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:src="@drawable/q4" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/action2"
                android:gravity="center"
                android:text="@string/youhuiquan"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/action3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:src="@drawable/q2" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/action3"
                android:gravity="center"
                android:text="@string/dengluchakanyouhuiquan"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/action4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:src="@drawable/q5" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/action4"
                android:gravity="center"
                android:text="@string/yaoqinghaoyou"
                android:textSize="13sp" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/action5"
                android:gravity="center"
                android:text="@string/yaoqinghaoyoudeyouhuiquan"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/action5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:src="@drawable/q2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/action6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:src="@drawable/q6" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/action6"
                android:gravity="center"
                android:text="@string/jifenshangcheng"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/action7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:src="@drawable/q2" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/action7"
                android:gravity="center"
                android:text="@string/dengluchakanjifen"
                android:textSize="13sp" />.
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/action8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:src="@drawable/q7" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/action8"
                android:gravity="center"
                android:text="@string/yaoyiyao"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:src="@drawable/q2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/action10"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_gravity="left"
                android:src="@drawable/q8" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/action10"
                android:gravity="center"
                android:text="@string/guanyuqianshengqian"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:src="@drawable/q2" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"></RelativeLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:src="@drawable/a9" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>